# minisqlr

./: Cargo.toml  README.md  minisqlr.db  minisqlr.db-journal
src/: main.rs
src/engine/: btree.rs  journal.rs  mod.rs  pages.rs
src/sql/: ast.rs  lexer.rs  mod.rs  operations.rs  optimize.rs  parser.rs  planner.rs  relation.rs  schema.rs  vm.rs
