[package]
name = "minisqlr"
version = "0.1.0"
edition = "2021"

[dependencies]
fs2 = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
debug = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winerror", "fileapi", "winbase", "std"] }
